# CoursesManagementGUI

./: README.md
CoursesManagementQT/: CMakeLists.txt  Contract.cpp  GUI.cpp  GUI.h  Repo.cpp  Service.cpp  Studii.cpp  StudiiGUI.h  SudiiGUI.cpp  console.cpp  date.txt  export.cpp  main.cpp  validator.cpp
CoursesManagementQT/Headers/: Contract.h  Repo.h  Service.h  Studii.h  VektorTemplate.h  console.h  export.h  undo.h  validator.h
